# fabric

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .hadolint.yaml  AGENTS.md  AGENT_GUARDRAILS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  LICENSING.md  MANIFEST.in  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODOS.md  batch_runner.py  cli-config.yaml.example  cli.py  constraints-termux.txt  design-qa.md  docker-compose.windows.yml  docker-compose.yml  fabric  fabric_bootstrap.py  fabric_constants.py  fabric_logging.py  fabric_state.py  fabric_time.py  flake.nix  mcp_serve.py  mini_swe_runner.py  model_tools.py  (+8 more)
.githooks/: commit-msg  pre-commit  pre-push
.github/: pull_request_template.md
LICENSES/: MIT-hermes-agent.txt  MIT-nous-research.txt
acp_adapter/: __init__.py  auth.py  entry.py  events.py  permissions.py  provenance.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  billing_view.py  bounded_response.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_breakdown.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_persistence.py  credential_pool.py  credential_sources.py  credits_tracker.py  curator.py  curator_backup.py  display.py  egress_policy.py  error_classifier.py  file_safety.py  gemini_native_adapter.py  gemini_schema.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  (+65 more)
apps/companion/: Cargo.toml  README.md
apps/companion/conformance/: derive_pet_state.json
apps/companion/crates/companion-app/: Cargo.toml
apps/companion/crates/companion-app/src/: args.rs  backend.rs  bridge.rs  demo.rs  main.rs  pet.rs
apps/companion/crates/companion-core/: Cargo.toml
apps/companion/crates/companion-core/src/: atlas.rs  gateway.rs  lib.rs  roam.rs  state.rs  store.rs
apps/companion/crates/companion-core/tests/: conformance.rs
apps/companion/tools/: avatar_bobbin.py  avatar_from_image.py  avatar_kit.py  avatar_knot.py  avatar_patch.py  avatar_shuttle.py  avatar_skein.py  pixel_avatars.py
apps/fabric-link-core/: .gitignore  Cargo.toml  README.md  uniffi.toml
apps/fabric-link-core/apple/: Package.swift  build-xcframework.sh
apps/fabric-link-core/apple/Sources/FabricLinkCore/: GeneratedSourcePlaceholder.swift
apps/fabric-link-core/bindings-smoke/: verify.sh
apps/fabric-link-core/bindings-smoke/kotlin/: build.gradle.kts  settings.gradle.kts
apps/fabric-link-core/bindings-smoke/kotlin/src/main/kotlin/: Smoke.kt
apps/fabric-link-core/bindings-smoke/python/: smoke.py
apps/fabric-link-core/bindings-smoke/swift/: main.swift
apps/fabric-link-core/browser-harness/: harness.js  index.html  run.mjs
apps/fabric-link-core/python/: README.md  pyproject.toml  setup.py  verify-wheel.sh
apps/fabric-link-core/python/src/: fabric_link_core.py
apps/fabric-link-core/src/: lib.rs  mls_state.rs
apps/fabric-link-core/tests/: binding_state_machine.rs  mls_pair_isolation.rs
ci_scripts/: ci_post_clone.sh
cron/: __init__.py  blueprint_catalog.py  jobs.py  lifecycle_guard.py  scheduler.py  scheduler_provider.py  suggestion_catalog.py  suggestions.py
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  web_research.yaml
deploy/: .env.hosted.example  Caddyfile  README.md  cloud-init.yaml  docker-compose.hosted.yml  provision.sh
docker/: SOUL.md  entrypoint.sh  fabric-exec-shim.sh  healthcheck.sh  main-wrapper.sh  stage2-hook.sh
docs/: documentation-contracts.json  rca-ssl-cacert-post-git-pull.md  session-lifecycle.md
nix/: lib.nix  (+12 more)
(+4857 files in other folders)
