[workspace]
resolver = "2"
members = ["crates/companion-core", "crates/companion-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ObliviousOdin/fabric"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
dirs = "6"
tempfile = "3"

# The companion is a desktop overlay, not a game: debug builds should still
# animate smoothly, so optimize dependencies (wgpu, image decode) even in dev.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
