[package]
name = "fabric-link-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "fabric-link-bindgen"
path = "src/bin/fabric-link-bindgen.rs"
required-features = ["bindgen"]

[features]
default = []
bindgen = ["uniffi/cli"]

[dependencies]
openmls = { version = "=0.8.1", default-features = false, features = ["js", "openmls_rust_crypto"] }
openmls_basic_credential = "=0.5.0"
openmls_rust_crypto = "=0.5.1"
openmls_traits = "=0.5.0"
thiserror = "=2.0.19"
tls_codec = "=0.4.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = "=0.32.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.2.17", features = ["js"] }
wasm-bindgen = "=0.2.126"

[dev-dependencies]
aes-gcm = "=0.10.3"
hkdf = "=0.12.4"
serde_json = "=1.0.151"
sha2 = "=0.10.9"
