[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-link-core"
dynamic = ["version"]
description = "Fabric Link's reviewed native OpenMLS core"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [{ name = "Fabric" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Security :: Cryptography",
]

[tool.setuptools]
py-modules = ["fabric_link_core"]
package-dir = {"" = "src"}
include-package-data = false
zip-safe = false
