[package]
name = "fabric-companion-core"
description = "Engine-agnostic pet logic for the Fabric companion overlay (Rust mirror of agent/pet)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
image.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
